--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,7 +33,7 @@ backup_server_cron:
 
 # run backup as user
 backup_client_user: zerobackup
-backup_client_user_sshdir: /home/zerobackup/.ssh
+backup_client_user_sshdir: /home/{{ backup_client_user }}/.ssh
 
 # add ssh key to backup_client_user
 backup_client_add_ssh_key: true
@@ -67,5 +67,20 @@ backup_client_rotatecount_weekly: 0
 backup_client_rotatecount_monthly: 0
 backup_client_rotate_weekly_day: 0 # 0=sunday
 backup_client_rotate_monthly_day: 1 # -1=last day of month
+
+# if configured, the backup client can be a backup proxy for proxmox lcx containers running on it
+# q: why use this method instead of running the client script on the container itself?
+# a: we can use lvm snapshots so the downtime of the services on the container can be minimized
+backup_client_pve_mountpoint: /mnt  # defines where the snapshot LVMs of all VMs listed will be mounted
+backup_client_pve: {}
+# example:
+# backup_client_pve:
+#   cl:  # subaltern host name as identifier
+#     lcx_id: 101  # container id: (TODO implement this for kvm too ...)
+#     lcx_suspend: false  # defaulte: false : if set suspend/resume else shutdown/start will be used (suspend/resume is considered experimental)
+#     lcx_commands:  # commands to run using 'pct exec'
+#       - service apache2 stop
+#       - mkdir -p /var/tmp/backup-databases
+#       - bash -c 'mysqldump --single-transaction nextcloud > /var/tmp/backup-databases/nextcloud.sql'  # hackish way to use shell redirect insight the  vm
 
 # vim: tabstop=2 expandtab shiftwidth=2 softtabstop=2 smartindent nu
