--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -88,4 +88,7 @@ backup_client_pve: {}
 # ! should be included in backup_client_dirs !
 backup_client_pve_mountpoint: /mnt
 
+# exit if we encounter a error with a container? if false, continue
+backup_client_pve_lcx_exitonerror: false
+
 # vim: tabstop=2 expandtab shiftwidth=2 softtabstop=2 smartindent nu
